<resources>
    <string name="app_name">ব্রাহ্মণবাড়িয়া</string>
    <string name="banner_ad_id"></string>
    <string name="interstitial_ad_id"></string>
    <string name="zila">জেলা</string>
    <string name="upozila">উপজেলা</string>
    <string name="mp">সাংসদ</string>
    <string name="rp">প্রতিনিধি</string>
    <string name="fp">কৃতি ব্যক্তিত্ব</string>
    <string name="edu">শিক্ষা</string>
    <string name="hospital">হাসপাতাল</string>
    <string name="doctors">ডাক্তার</string>
    <string name="police">পুলিশ</string>
    <string name="fire">ফায়ার সার্ভিস</string>
    <string name="communication">যোগাযোগ</string>
    <string name="tourist">পর্যটন</string>
    <string name="hotel">হোটেল</string>
    <string name="bank">ব্যাংক</string>
    <string name="office">প্রতিষ্ঠান</string>
    <string name="organization">সংগঠন</string>
    <string name="newspaper">পত্রিকা</string>
    <string name="librarys">পাঠাগার</string>
    <string name="postal">পোস্টাল</string>
    <string name="gallery">গ্যালারি</string>
    <string name="text1">বাংলাদেশের</string>
    <string name="text2">সাংস্কৃতিক রাজধানীতে</string>
    <string name="text3">স্বাগতম!</string>
    <string name="aappname">আমাদের ব্রাহ্মণবাড়িয়া</string>
    <string name="appversion">ভার্সন: 2.0.0</string>
    <string name="bb_info_list">আমাদের ব্রাহ্মণবাড়িয়া এপটি ব্রাহ্মণবাড়িয়া জেলার ডিজিটালাইজেশন। এই এপের মাধ্যমে আমরা একদিকে যেমন ব্রাহ্মণবাড়িয়া জেলার শত শত বছরের ইতিহাস, ঐতিহ্য ও সংস্কৃতি সবার মাঝে তুলে ধরার চেষ্টা করেছি, অন্যদিকে রক্ত সন্ধান, হাসপাতাল ও ডাক্তারদের বিভিন্ন তথ্য, থানা-পুলিশের তথ্য, ফায়ার-সার্ভিসের তথ্য, বিভিন্ন ব্যাংক, হোটেল, অফিস, সংস্থা-সংগঠন ও জনপ্রতিনিধিদের তথ্য দেওয়ার চেষ্টা করেছি। যদিও আপনাদের সাহায্য ছাড়া এই তথ্য কখনই পূর্ণাঙ্গতা পাবে না। তাই আপনি বা আপনাদের কারও কোনো হাসপাতাল, হোটেল, অফিস, সংগঠন কিংবা অন্যকিছুর তথ্য যদি এপে না থাকে, তাহলে আমাদের সাথে সরাসরি যোগাযোগ করার জন্য অনুরোধ করা যাচ্ছে।\n\nআমাদের ব্রাহ্মণবাড়িয়া এপ নিয়ে আপনার যেকোনো মূল্যবান উপদেশ, অনুরোধ ও আইডিয়াকে আমরা সম্মান করি। তাই এপ সংক্রান্ত আপনার যেকোনো মূল্যবান মতামত আমাদের জানাতে পারেন। এছাড়াও এই এপে যদি কোনো ভুল তথ্য দেখেন, তাহলে আমাদেরকে সংশোধন করার জন্য ইনবক্স বা ইমেইল করতে পারেন।</string>
    <string name="about_dev">প্রতিষ্ঠাতা ও ডেভেলপার</string>
    <string name="about_dev_name">মো: সজীবুর রহমান সজীব</string>
    <string name="about_dev_title">ছাত্র, আনকাং বিশ্ববিদ্যালয়, চীন</string>
    <string name="about_dev_details">আমি মোহাম্মদ সজীবুর রহমান সজীব (পাপেল)। বর্তমানে চীনের শানশি প্রদেশের আনকাং বিশ্ববিদ্যালয়ের কম্পিউটার বিজ্ঞান ও প্রযুক্তি বিষয়ের উপর B.Sc অনার্স করছি। আমি ব্রাহ্মণবাড়িয়া ট্রিবিউন, আর্টিকেল ফর পিপল, আমাদের ব্রাহ্মণবাড়িয়া এপ ও চাইনিজ হেল্পার এপের প্রতিষ্ঠাতা।</string>
    <string name="about_shimanto">সহপ্রতিষ্ঠাতা ও উপদেষ্টা</string>
    <string name="about_shimanto_name">এইচ এম মুতাসিম সীমান্ত</string>
    <string name="about_shimanto_title">ছাত্র, ঢাকা কমিউনিটি মেডিক্যাল কলেজ</string>
    <string name="about_shimanto_details">আমি এইচ এম মুতাসিম সীমান্ত। ছোটবেলা কেটেছে তিতাস বিধৌত ব্রাহ্মনবাড়িয়া জেলায়। বর্তমানে পড়াশুনা করছি ঢাকা কমিউনিটি মেডিক্যাল কলেজে। সেই সাথে আমি ব্রাহ্মণবাড়িয়ার শিক্ষা ও স্বাস্থ্য সেবা ভিত্তিক সামাজিক সংগঠন খাতা-কলম ফাউন্ডেশনের প্রতিষ্ঠাতা। ছোটবেলা থেকেই সাংস্কৃতিক ও সামাজিক কর্মকাণ্ডের সাথে জড়িত থাকতে পছন্দ করি। তাই বর্তমানে কাজ করছি ড্রপ আউট চিল্ড্রেন ও মেন্টাল হেলথ নিয়ে।</string>
    <string name="about_mahin">ডিজাইনার</string>
    <string name="about_saju_name">সাজু রানা</string>
    <string name="about_saju_details">আমি সাজু রানা, জন্ম ও বেড়ে উঠা মেহেরপুর জেলায়। সিটি পলিটেকনিক ইন্সটিটিউট থেকে পড়াশোনা শেষে কয়েকটি আইটি কোম্পানিতে প্রফেশনাল গ্রাফিক্স ডিজাইনার হিসেবে কাজ করে, এখন মেহেরপুর আইটিতে কাজ করছি। প্রোডাক্ট ডিজাইন, কালার-কম্বিনেশন, ইউজার ইন্টারফেস নিয়ে কাজ করি অন্যভাবে বললে শৈল্পিক কাজ করতে পছন্দ করি।</string>
    <string name="about_saju_designation">গ্রাফিক্স ডিজাইনার, মেহেরপুর আইটি</string>
    <string name="blood_details1">ব্লাড বা রক্ত হচ্ছে আমাদের জন্য এমন এক নেয়ামত যা আল্লাহ রাব্বুল আলামীনের পক্ষ থেকে যার কোনো বিকল্প এখন পর্যন্ত তৈরি হয়নি। ব্লাড ডোনেশন নিয়ে কিছু সাধারণ কথা আগে আমরা জেনে নেই এতে করে আমাদের অনেক কিছু বুঝতে সুবিধা হবে।\n\n\u25CF বিভিন্ন পরিসংখ্যান অনুযায়ী দেশে বছরে আট থেকে নয় লাখ ব্যাগ রক্তের চাহিদা থাকলেও রক্ত সংগ্রহ হয় ছয় থেকে সাড়ে ছয় লাখ ব্যাগ, ঘাটতি থাকে তিন লাখ ব্যাগের বেশি।\n\u25CF দেশে রক্তের অভাবে মারা যান প্রায় ৫৫ হাজার মানুষ।\n\u25CF বিশ্ব স্বাস্থ্য সংস্থার তথ্যে বলা হয়েছে, উন্নত বিশ্বে ৪৫ ভাগ মানুষ স্বেচ্ছায় রক্ত দেন। আর বাংলাদেশ বা উন্নয়নশীল দেশগুলোতে প্রতি হাজারে মাত্র তিনজন রক্ত দেন।\n\nজীবন বাঁচাতে আল্লাহ উৎসাহিত করছেনঃ\n\nআমরা আগেই বলেছি রক্তের অভাবে দেশে প্রতিবছর ৫৫ হাজার মানুষ মারা যান। আপনার আমার রক্তদানে এই মৃত্যুর সংখ্যা কমতে পারে। আর মানুষের জীবন বাঁচাতে মহান আল্লাহ আমাদের উৎসাহিত করেছেন-\n\nوَمَنْ أَحْيَاهَا فَكَأَنَّمَا أَحْيَا النَّاسَ جَمِيع\nযদি কেউ একটি প্রাণ রক্ষা করে সে যেন সকল মানুষের প্রাণ রক্ষা করলো।\n\nরক্তদান আপনার জন্য সাদক্বাহঃ\n\nরক্তদান এমন একটি কাজ যার দ্বারা জীবিত ও মৃত ২ অবস্থায়-ই সওয়াব অর্জন করা যায়। অনেক আলেমদের মতে রক্তদান হচ্ছে সাদাক্বায়ে জারিয়াহ। আর সাদাক্বায়ে জারিয়া সম্পর্কে রাসূল সাঃ বলেন, “মানুষ মৃত্যু বরণ করলে তার আমলের সমস্ত পথ বন্ধ হয়ে যায় তিনটি ব্যতীতঃ সদকায়ে জারিয়া,এমন ইলম যার দ্বারা উপকৃত হওয়া যায় এবং এমন নেককার সন্তান যে তার জন্য দু’আ করে” -- মুসলিম: ৩০৮৪\n\nরক্তদানে কোনো ক্ষতি নেই বরংচ সবদিক দিয়ে আপনার উপকার বা কল্যাণ। যেমন-\n\u25CF নিয়মিত রক্তদাতাদের ক্যানসারে আক্রান্ত হওয়ার ঝুঁকি কম থাকে।\n\u25CF বছরে তিনবার রক্ত দিলে শরীরে নতুন লোহিত কণিকা তৈরির হার বেড়ে যায়। এতে অস্থিমজ্জা সক্রিয় থাকে। দ্রুত রক্ত স্বল্পতা পূরণ হয়।\n\u25CF রক্তে কোলেস্টরেলের মাত্রা কমে যায়, এতে রক্তচাপ নিয়ন্ত্রণে থাকে। ফলে হৃদরোগ ও হার্ট অ্যাটাকের ঝুঁকি অনেকটাই কমে যায়।\n\u25CF রক্ত দিলে যে ক্যালোরি খরচ হয়, তা ওজন কমানোর ক্ষেত্রে ও রক্তচাপ নিয়ন্ত্রণে গুরুত্বপূর্ণ ভূমিকা রাখে।\n\u25CF রোগ প্রতিরোধ ক্ষমতা বাড়ে।\n\u25CF শরীরে হেপাটাইটিস-বি, হেপাটাইটিস-সি, জন্ডিস, ম্যালেরিয়া, সিফিলিস, এইচআইভি বা এইডসের মতো বড় কোন রোগ আছে কি না, সেটি বিনা খরচে জানা যায়।\n\nনিজে রক্ত দিন, অন্যকে রক্ত দানে উৎসাহিত করুন। আপনার যদি জরুরী ভিত্তিতে রক্তের প্রয়োজন হয়, তাহলে যত দ্রুত সম্ভব আমাদের জানান। আমরা আপনার কাঙ্কিত রক্তের সন্ধানে সহায়তা করব।</string>
    <string name="about_citation">বিশেষ কৃতজ্ঞতা</string>
    <string name="about_citation_details">কামরুল তালুকদার, শাহরিয়ার হোসেন মাহিন, ফার্দীন সাজেদ, ইফতিখার জামীল, মোহাম্মদ রনি, রিদওয়ান আনসারী, মোহাম্মদ সাকিব, মোঃ এন\'আমুল হক সবুর ও এর সাথে সংশ্লিষ্ট সবার প্রতি কৃতজ্ঞতা প্রকাশ করছি।</string>
    <string name="app_details">বাংলাদেশের সাংস্কৃতিক রাজধানী হিসেবে পরিচিত ব্রাহ্মণবাড়িয়া জেলার রয়েছে শত বছরের পুরাতন নিজস্ব ইতিহাস, ঐতিহ্য ও সংস্কৃতি। বাংলার বারো ভুঁইয়াদের প্রধান ঈসা খাঁ বাংলায় প্রথম এবং অস্থায়ী রাজধানী স্থাপন করেন ব্রাহ্মণবাড়িয়া জেলার সরাইলে। আর এই সরাইলকে কেন্দ্র করে গড়ে উঠে ঐতিহ্যবাহী তিতাস-বিধৌত ব্রাহ্মণবাড়িয়া। ব্রাহ্মণবাড়িয়া জেলা হিসেবে আত্মপ্রকাশ করে ১৯৮৪ সালের ১৫ ফেব্রুয়ারি।\n\nব্রিটিশবিরোধী আন্দোলন, ভাষা আন্দোলন, মহান মুক্তিযুদ্ধ সবকয়টি ক্ষেত্রে এই জেলার অবদান ইতিহাস স্বীকৃত। ব্রাহ্মণবাড়িয়ায় ১৯০৫ সালে বঙ্গভঙ্গকে কেন্দ্র করে স্বদেশী আন্দোলন শুরু হলে এর নেতৃত্ব দেন ব্রিটিশবিরোধী আন্দোলনের অন্যতম বিপ্লবী উল্লাস কর দত্ত, যাকে ব্রিটিশরা ফাঁসির রায় ও পরে আন্দামানে দ্বীপান্তরিত করেছিল। বিপ্লবী উল্লাস কর দত্ত ছাড়াও ব্রিটিশ বিরোধী আন্দোলনের অন্যতম বিপ্লবীদের মাঝে অখিলচন্দ্র নন্দী, অতীন্দ্রমোহন রায়, গোপাল দেব, নৃপেন্দ্র দত্ত রয়, রবীন্দ্রমোহন নাগ, শান্তি ঘোষ, সুনীতি চৌধুরীর মত বিপ্লবীদের জন্মস্থান এই ব্রাহ্মণবাড়িয়া জেলায়।\n\nবায়ান্নর ভাষা আন্দোলনের অন্যতম ভাষা সৈনিকদের মাঝে অলি আহাদ, আহমেদ আলী, ধীরেন্দ্রনাথ দত্ত, মহিউদ্দিন আহমাদ, শেখ আবু হামেদের মত মহান নেতাদের জন্মস্থান এই ব্রাহ্মণবাড়িয়া জেলায়। মহান মুক্তিযুদ্ধের অন্যতম সংগঠক আবদুল কুদ্দুস মাখনের জন্মস্থান এই ব্রাহ্মণবাড়িয়ায়। ব্রাহ্মণবাড়িয়ার আখাউড়া বন্দর বাংলাদেশের অন্যতম বৃহত্তম স্থলবন্দর আর মুক্তিযুদ্ধে এই বন্দরের ভূমিকা ও ব্যবহার অন্যতম উল্লেখযোগ্য। এই জেলায় অনেকগুলো মুক্তিযোদ্ধাদের গণকবর রয়েছে। ব্রাহ্মণবাড়িয়ার আখাউড়ার মাটিতে শুয়ে আছে ৭ বীরশ্রেষ্ঠের একজন, বীরশ্রেষ্ঠ মোস্তফা কামাল। বীর উত্তম খেতাবপ্রাপ্ত বীর মুক্তিযোদ্ধা আনোয়ার হোসেন, বীর প্রতীক খেতাবপ্রাপ্ত আবদুর রহমান, বীর প্রতীক মনির আহমেদ খান, বীর প্রতীক মোফাজ্জল হোসেন, বীর প্রতীক আবু সালেক, বীর বিক্রম খেতাবপ্রাপ্ত আবু সালেহ মোহাম্মদ নাসিম, বীর বিক্রম শামসুল হক, বীর বিক্রম শাহজাহান সিদ্দিকীদের জন্মস্থান এই ব্রাহ্মণবাড়িয়ায়। এছাড়াও মুক্তিযুদ্ধের ২ ও ৩ নং সেক্টরের গেরিলা উপদেষ্টা লুৎফুল হাই সাচ্চুর জন্মভূমি এই মাটিতেই।\n\nতৎকালীন পাকিস্তানের অষ্টম প্রধানমন্ত্রী এবং পাকিস্তানের একমাত্র উপ-রাষ্ট্রপতি নুরুল আমিনের জন্মস্থান ব্রাহ্মণবাড়িয়া জেলার সরাইল উপজেলার শাহবাজপুরে। ব্রিটিশ ভারতীয় রাজনীতিবিদ এবং আইনজীবি আবদুর রসুল, ব্রিটিশ ভারতীয় মুসলিম রাজনৈতিক নেতা নবাব সৈয়দ শামসুল হুদা, অক্সফোর্ডের পিএইচডিধারি ডক্টর অবিনাশ চন্দ্র সেন, জাতীয় অধ্যাপক কবীর চৌধুরী, ইতালিয়ান চলচ্চিত্র অভিনেতা পায়েল ঠাকুর, যুক্তরাষ্ট্রের এফডিএ এর বিজ্ঞানী তাহের খান, মহাকাশ গবেষক আবদুস সাত্তার খানদের জন্মভূমি এই ব্রাহ্মণবাড়িয়ায়।\n\nএই মাটিতে জন্ম নেন ঈসা খাঁ, ফখরে বাঙ্গাল (রহঃ), মাওলানা সিরাজুল ইসলাম (রহঃ), মুফতি ফজলুল হক আমিনী (রহঃ), খ্যাতিমান সঙ্গীতজ্ঞ ওস্তাদ আলাউদ্দিন খাঁ, আলী আকবর খান, আয়েত আলী খাঁ, আবেদ হোসেন খাঁ, মোবারক হোসেন খাঁ, মীর কাশেম খাঁ, বাহাদুর হোসেন খাঁ, নবাব সৈয়দ শামসুল হুদা, ব্যারিস্টার আবদুর রসুল, উল্লাসকর দত্ত, নুরুল আমিন, অদ্বৈত মল্লবর্মণ, কবি আল মাহমুদ, গভর্নর সালেহউদ্দিন আহমেদ, মেজর জেনারেল শাকিল আহমেদ, কর্ণেল গুলজার উদ্দিন আহমেদসহ আরও অসংখ্য খ্যাতিমান ব্যক্তিত্বের জন্মস্থান এই ব্রাহ্মণবাড়িয়া জেলা।\n\nঅর্থনৈতিক বাংলাদেশ গঠনে ব্রাহ্মণবাড়িয়া জেলার অবদান অনস্বীকার্য। বাংলাদেশের মোট গ্যাসের এক-তৃতীয়াংশ গ্যাস সরবরাহ করা হয় ব্রাহ্মণবাড়িয়া থেকে। বাংলাদেশের দ্বিতীয় বৃহত্তম বিদ্যুৎ উৎপাদনকেন্দ্র হচ্ছে ব্রাহ্মণবাড়িয়ার আশুগঞ্জ তাপ বিদ্যুৎকেন্দ্র ও বাংলাদেশের বৃহত্তম ইউরিয়া সার কারখানা হচ্ছে ব্রাহ্মণবাড়িয়ার আশুগঞ্জ ফার্টিলাইজার। এছাড়াও প্রবাসীদের পাঠানো রেমিট্যান্সের শীর্ষে যেকয়টি জেলা রয়েছে এরমাঝে ব্রাহ্মণবাড়িয়া জেলা একটি।\n\nআর এই ঐতিহ্যবাহী তিতাস-বিধৌত ব্রাহ্মণবাড়িয়া জেলাকে সকল মানুষের সামনে তুলে ধরার জন্য \'আমাদের ব্রাহ্মণবাড়িয়া\' এপটি বানানো হয়েছে। এই এপটি মূলত ব্রাহ্মণবাড়িয়া জেলার ডিজিটালাইজেশন। এই এপ থেকে ব্রাহ্মণবাড়িয়া জেলার যাবতীয় নির্ভরযোগ্য তথ্য পাওয়া যাবে।</string>
    <string name="appfeature">আমাদের ব্রাহ্মণবাড়িয়া এপের ফিচার: </string>
    <string name="establish">১৯৪৮ সাল</string>
    <string name="principal">প্রফেসর মোঃ হানিফ</string>
    <string name="mobile">0851-57600</string>
    <string name="email">bbgovtcollege@yahoo.com</string>
    <string name="web">www.bgc.edu.bd</string>
    <string name="address">সদর, ব্রাহ্মণবাড়িয়া</string>
    <string name="hospitalName">ব্রাহ্মণবাড়িয়া সদর হাসপাতাল</string>
    <string name="hostype">সরকারি হাসপাতাল</string>
    <string name="director">তত্ত্বাবধায়ক: ডা: মো: সফিকুল ইসলাম</string>
    <string name="seat">২৫০ শয্যা বিশিষ্ট</string>
    <string name="doctor">৪৬ জন ডাক্তার কর্মরত আছে</string>
    <string name="details">সরকারি  ছুটি ব্যতীত সপ্তাহের প্রতিদিন সবধরনের রোগীর চিকিৎসা দেওয়া হয়। প্রতি শনিবার সকাল ৮টা থেকে ২.৩০ পর্যন্ত বহির্বিভাগ খোলা থাকে এবং জরুরী বিভাগ প্রতিদিন খোলা থাকে। সদর হাসপাতালের সেবা সমূহের মাঝে রয়েছে- গাইনাকোলজি, সার্জারী, ই.এন.টি, অর্থোপেডিক্স, মেডিসিন, চক্ষু, পিডিয়াট্রিক্স, কার্ডিওলজি, ডেন্টাল, সেক্স অ্যান্ড ডারমাটলজি।</string>
    <string name="doctorsName">Dr. Karim Ullah</string>
    <string name="doctorTitle">MBBS, FRCS</string>
    <string name="doctorSpe">স্ত্রী ও গাইনী রোগ</string>
    <string name="doctorsCHam">নিউ স্কয়ার জেনারেল হাসপাতাল এন্ড ডায়াগনষ্টিক সেন্টার</string>
    <string name="doctorsTime">প্রতি শুক্রবার সকাল ৮টা থেকে রাত ৮টা</string>
    <string name="swiftCode">PUBABDDH</string>
    <string name="rountignNumber">175120431</string>
    <string name="library">ব্রাহ্মণবাড়িয়া পাবলিক লাইব্রেরী</string>
    <string name="book">বইয়ের সংখ্যা: ৭৪৫৪টি</string>
    <string name="member">সদস্য সংখ্যা: ১৭৬জন+</string>
</resources>