<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bankNameID"
            android:drawableStart="@drawable/ic_bank_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hospitalName"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankBranchID"
            android:drawableStart="@drawable/ic_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hostype"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankRoutingID"
            android:drawableStart="@drawable/ic_routing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/rountignNumber"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankSwiftID"
            android:drawableStart="@drawable/ic_swift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/swiftCode"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankNumberID"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/mobile"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankEmailID"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankWebID"
            android:drawableStart="@drawable/ic_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/web"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankTimeID"
            android:drawableStart="@drawable/ic_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorsTime"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/bankAddressID"
            android:drawableStart="@drawable/ic_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>