<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/libraryNameID"
            android:drawableStart="@drawable/ic_librarry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/library"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/libraryEstablishID"
            android:drawableStart="@drawable/ic_established"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/establish"
            android:textSize="16sp"
            android:textColor="#000000"/>


        <TextView
            android:id="@+id/libraryBookID"
            android:drawableStart="@drawable/ic_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/book"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/libraryMemberID"
            android:drawableStart="@drawable/ic_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/member"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/libraryLibrarianID"
            android:drawableStart="@drawable/ic_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/principal"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/libraryNumberID"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/web"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/libraryLocationID"
            android:drawableStart="@drawable/ic_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>