<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/hospitalMainPageImageID"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/hospitalNameTitleID"
            android:drawableStart="@drawable/ic_hospital_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hospitalName"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalTypeID"
            android:drawableStart="@drawable/ic_hospitaltype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hostype"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalDirectorID"
            android:drawableStart="@drawable/ic_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/director"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalSeatID"
            android:drawableStart="@drawable/ic_hospital_bed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/seat"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalDoctorListID"
            android:drawableStart="@drawable/ic_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctor"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalNumberID"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/mobile"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalEmailID"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/hospitalAddressID"
            android:drawableStart="@drawable/ic_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/hospitalDescriptionID"
            android:text="@string/details"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>