<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/newspaperMainPageImageID"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <TextView
            android:id="@+id/newspaperNameTitleID"
            android:drawableStart="@drawable/ic_newspapername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hospitalName"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperVersionID"
            android:drawableStart="@drawable/ic_journal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/hostype"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperEditorID"
            android:drawableStart="@drawable/ic_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/director"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperNumberID"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/mobile"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperEmailID"
            android:drawableStart="@drawable/ic_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperWebID"
            android:drawableStart="@drawable/ic_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/web"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/newspaperAddressID"
            android:drawableStart="@drawable/ic_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>