<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardElevation="5dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctorsImageID"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_doctor_man"
            app:civ_border_width="@dimen/cardview_default_elevation"
            app:civ_border_color="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/doctorsNameID"
            android:drawableStart="@drawable/ic_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorsName"
            android:textSize="18sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsTitleID"
            android:drawableStart="@drawable/ic_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorTitle"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsSpecialistID"
            android:drawableStart="@drawable/ic_stethoscope"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorSpe"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsChamberID"
            android:drawableStart="@drawable/ic_hospital_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorsCHam"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsTimeID"
            android:drawableStart="@drawable/ic_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/doctorsTime"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsNumberID"
            android:drawableStart="@drawable/ic_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/mobile"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/doctorsAddressID"
            android:drawableStart="@drawable/ic_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="#000000"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>